# spright

./: .readthedocs.yaml  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
doc/source/: conf.py
docs/source/: conf.py  index.rst
docs/source/api/: api.rst  distribution.rst  rmestimator.rst  rmrelation.rst
mmmbop/: distribution.py  model.py  mrestimator.py  rmrelation.py
mmmbop/data/: stpm_220816.csv
moot/: __init__.py  core.py  distribution.py  lpf.py  model.py  rdmodel.py  rmestimator.py  rmrelation.py  version.py
moot/data/: rdmap.fits  stpm_230202.csv
notebooks/: 01_RMEstimator.ipynb  02_RMRelation.ipynb  03a_RMEstimator_fgk.ipynb  03b_RMEstimator_tepcat_m.ipynb  A1_analytical_model_weight_parameterisation.ipynb  A1_analytical_model_weights.ipynb  A1a_RMEstimator_mock_mcmc.ipynb  A1b_RMEstimator_mock_evidence.ipynb  A1c_RMEstimator_mock_analysis.ipynb  RMEstimator.ipynb  RMRelation.ipynb  common.py  stpm.fits  tepcat_fgk.fits  tepcat_m.fits
notebooks/A_water_world_evidence/: 01a_stpm_zeng19.ipynb  01b_stpm_aguichine21.ipynb  02a_fgk_zeng19.ipynb  02b_fgk_aguinchine21.ipynb  common.py
notebooks/zeng19/: zeng19.ipynb
spright/: __init__.py  analytical_model.py  core.py  distribution.py  io.py  lerp.py  lnlikelihood.py  lpf.py  mock.py  model.py  rdmodel.py  relationmap.py  rmestimator.py  rmrelation.py  util.py  version.py
spright/data/: STPM_improved_210721.csv  STPM_original_210721.csv  TEPCat.csv  TEPCat_FGK_20230522.csv  TEPCat_M_20230522.csv  exoplanet_eu.csv  rocky_zeng19.fits  stpm.fits  tepcat_fgk.fits  water_aguichine21.fits  water_zeng19.fits
spright/scripts/: spright.py
tests/: test_installation.py  test_io.py  test_rmrelation.py
