[project]
name = "spright"
version = "23.06.24"
description = 'Bayesian radius-density-mass relation for small planets.'
authors=[{name='Hannu Parviainen', email='hpparvi@gmail.com'}]
classifiers=[
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]
keywords = ['astronomy',  'astrophysics',  'exoplanets']
dependencies = ["numpy", "numba", "scipy", "pandas", "astropy", "pytransit", "arviz", "corner", "tqdm", "celerite", "emcee"]

[project.urls]
homepage = 'https://github.com/hpparvi/spright'

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['spright', 'spright.data']